# 3DTerrain

./: .gitignore  CMakeLists.txt  OsgImGuiHandler.h  README.md  main.cpp  osgManager.cpp  osgManager.h
controler/: meshgeneratormanager.cpp  meshgeneratormanager.h  terrainManager.cpp  terrainManager.h
generator/: SurfaceNets.cpp  terraingenerator_roblox.cpp  terraingenerator_roblox.h  voxel_mesher.cpp  voxel_mesher.h  voxel_mesher_surfacenet.cpp  voxel_mesher_surfacenet.h
resource/: whitemetal_diffuse.tiff
voxels/: common_enum.h  voxelBrush.h
